Remove reference to javax.xml.bind